--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ body {
 
   .page3 {
     width: 100%;
-    height: 80%;
+    height: 100%;
     /* background-color: royalblue; */
     padding: 3vw;
     padding-top: 6vw;
@@ -512,5 +512,7 @@ body {
     align-items: center;
     /* background-color: #ff5353; */
     font-size: 7vw;
+    font-weight: 300;
+    font-style: italic;
   }
 }
